--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -1,1 +1,19 @@
 @use "variables" as *;
+
+@mixin button-style() {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-decoration: none;
+    color: $secondary-color;
+    font-weight: bold;
+    font-size: 1.5rem;
+    transition: color 0.3s;
+    background-color: $primary-color;
+    border-radius: 10px;
+
+    &:hover {
+        color: black;
+    }
+}
