--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -9,4 +9,4 @@ $primary-color: var(--primary-color);
 $secondary-color: var(--secondary-color);
 $text-color: var(--text-color);
 $navbar-height: var(--navbar-height);
-$font-family: 'Abhaya Libre', sans-serif;
+$font-family: 'Abhaya Libre';
