--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -5,8 +5,8 @@
     --navbar-height: 8rem;
 }
 
-$primary-color: var(--primary-color);
-$secondary-color: var(--secondary-color);
+$primary-color: #BF0413;
+$secondary-color: #FFFBE5;
 $text-color: var(--text-color);
 $navbar-height: var(--navbar-height);
 $font-family: 'Abhaya Libre';
