--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -22,6 +22,7 @@
         .hero-text {
             color: $primary-color;
             
+            
             h1{
                 font-size: 3rem;
                 margin-bottom: 1rem;
@@ -30,10 +31,40 @@
                 @include button-style();
                 height: 2.52em;
                 width: 8em;
+                margin: 1.5rem 0 1.5rem 0;
                 svg{
                     width: 1em;
                     height: 1em;
                     margin-right: 0.5rem;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .hero {
+        
+
+        &-content {
+            flex-direction: column;
+            align-items: center;
+
+            img {
+                width: 100%;
+                height: auto;
+                padding: 0;
+            }
+
+            .hero-text {
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                h1 {
+                    font-size: 2rem;
                 }
             }
         }
