--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -38,16 +38,44 @@
             }
 
             a {
-                @include button-style();
-                height: 2.52em;
-                width: 8em;
-                margin: 1.5rem 0 1.5rem 0;
 
                 svg {
                     width: 1em;
                     height: 1em;
                     margin-right: 0.5rem;
                 }
+            }
+        }
+    }
+
+    &-links {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-bottom: 10px;
+
+
+        a {
+            @include button-style();
+            height: 2.52em;
+            width: 8em;
+            margin: 0 1rem 0 0;
+
+            svg {
+                width: 1em;
+                height: 1em;
+                margin-right: 0.5rem;
+            }
+        }
+
+        #about-link {
+            background-color: $secondary-color;
+            color: $primary-color;
+            transition: 0.25s;
+            width: 10em;
+
+            &:hover {
+                color: black;
             }
         }
     }
@@ -262,8 +290,14 @@
 
 // --- Responsive ---
 @media (max-width: 900px) {
-    .hero-content {
-        width: 95%;
+
+    .hero {
+        height: 80vh;
+        width: 100%;
+
+        &-content {
+            width: 95%;
+        }
 
         img {
             height: 320px;
@@ -274,6 +308,16 @@
     .destacados-grid {
         gap: 18px;
     }
+
+    .hero-links {
+        flex-direction: column;
+        align-items: center;
+
+        a {
+            width: 100%;
+            margin: 0.5rem 0;
+        }
+    }
 }
 
 @media (max-width: 650px) {
@@ -282,7 +326,7 @@
         align-items: center;
 
         img {
-            width: 100%;
+            width: 50%;
             height: auto;
             padding: 0;
         }
